# voxel-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: default.frag.glsl  default.vert.glsl  font.frag.glsl  font.vert.glsl
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  player.cpp  player.hpp  time.hpp
src/game/: camera.cpp  camera.hpp  game.cpp  game.hpp  input.cpp  input.hpp
src/renderer/: chunk_mesh.cpp  chunk_mesh.hpp  chunk_renderer.cpp  chunk_renderer.hpp  font.cpp  font.hpp  renderer.cpp  renderer.hpp  resource_manager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/world/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  section.cpp  section.hpp  world.cpp  world.hpp
